forgejo/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: forgejo-http-ingress
spec:
  tls:
  - secretName: forgejo-cert
  rules:
  - host: git.sachiniyer.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: forgejo-http
             port:
               number: 3000
